<resources>
    <string name="app_name">GoTravel</string>
    <string name="Home">Home</string>
    <string name="Transport">Transport</string>
    <string name="Trip">Trip</string>
    <string name="Translate">Translate</string>
    <string name="Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>